--- a/preprocessamento_heat_and_heart_v2.ipynb
+++ b/preprocessamento_heat_and_heart_v2.ipynb
@@ -31,7 +31,7 @@
         "GEOVWyU5URnz",
         "H6taNwWDad62"
       ],
-      "authorship_tag": "ABX9TyMNZ+lXOFuOE6/L3evut+4f",
+      "authorship_tag": "ABX9TyOcDk4LIvXRA6XW2exnmdnk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11391,7 +11391,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 424
         },
         "id": "T41-4wCCIFAM",
         "outputId": "263852b8-0628-4838-bd67-e8af34dbf3c6"
@@ -11843,7 +11843,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 424
         },
         "id": "2RwFNTnDODwT",
         "outputId": "d7e4ea9d-2cf1-4619-886e-de11bd088e4f"
@@ -17216,7 +17216,7 @@
     {
       "cell_type": "code",
       "source": [
-        "datasus_df = datasus_df.drop(['hospitalizations', 'average_stay', 'deaths', 'mortality_rate'], axis=1)\n",
+        "datasus_df = datasus_df.drop(['average_stay', 'deaths', 'mortality_rate'], axis=1)\n",
         "\n",
         "datasus_df.columns"
       ],
